temp-kube/my-private-reg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: https://hub.docker.com/repository/docker/sabbottlabs/kube
  imagePullSecrets:
  - name: regcred
